LPD-X DO NO MERGE, add NewEnv annotation for testing purpose